; Library: lock-free BST implementation
(library
 (name bst)
 (wrapped false)
 (modules bst AtomicFlagTag)
 (ocamlopt_flags (:standard -w -32))
 (ocamlc_flags (:standard -w -32)))


(library
 (name coarseGrainedBST)
 (wrapped false)
 (modules coarseGrainedBST)
 (ocamlopt_flags (:standard -w -32))
 (ocamlc_flags (:standard -w -32)))
