; Library: lock-free BST implementation
(library
 (name Bst)
 (wrapped false)
 (modules Bst AtomicFlagTag)
 (ocamlopt_flags (:standard -w -32))
 (ocamlc_flags (:standard -w -32)))


(library
 (name coarseGrainedBST)
 (wrapped false)
 (modules coarseGrainedBST)
 (ocamlopt_flags (:standard -w -32))
 (ocamlc_flags (:standard -w -32)))

(library
 (name optimisticLazyList)
 (wrapped false)
 (modules optimisticLazyList)
 (ocamlopt_flags (:standard -w -32))
 (ocamlc_flags (:standard -w -32)))
