; Library: lock-free BST implementation
(library
 (name Bst)
 (wrapped false)
 (modules Bst)
 (ocamlopt_flags (:standard -w -32))
 (ocamlc_flags (:standard -w -32))
 (libraries AtomicFlagTag))


(library
 (name coarseGrainedBST)
 (wrapped false)
 (modules coarseGrainedBST)
 (ocamlopt_flags (:standard -w -32))
 (ocamlc_flags (:standard -w -32)))

(library
 (name optimisticLazyList)
 (wrapped false)
 (modules optimisticLazyList)
 (ocamlopt_flags (:standard -w -32))
 (ocamlc_flags (:standard -w -32)))

(library
 (name AtomicFlagTag)
 (wrapped false)
 (modules AtomicFlagTag)
 (ocamlopt_flags (:standard -w -32))
 (ocamlc_flags (:standard -w -32)))
