(executable
 (name checker)
 (modules checker)
 (ocamlopt_flags (:standard -w -32))
 (ocamlc_flags (:standard -w -32))
 (libraries Bst coarseGrainedBST))

(executable
 (name qcheck_lin_lockfree_bst)
 (modules qcheck_lin_lockfree_bst)
 (libraries Bst qcheck-lin.domain))

(executable
 (name qcheck_stm_lockfree_bst)
 (modules qcheck_stm_lockfree_bst)
 (libraries Bst qcheck-stm.sequential qcheck-stm.domain qcheck-multicoretests-util))
